Added Cookie Authentication Method / Added Refs to GitIgnore - Added method to authenticate VIA browser cookie - Added Refs/ to the gitignore if you've created a secondary BeatSaber copy in your repository root rather than using the BeatLeader.csproj.user file

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Source\9_Resources\AssetBundles\AssetBundles
 Source\9_Resources\AssetBundles\AssetBundles.manifest
 BeatLeader.csproj.user
 BeatLeader.sln.DotSettings.user
+Refs/
