--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,85 @@
-name: Build
+name: Build and Release on Tag
 
 on:
-    push:
-        branches: [master]
-        tags: v*
-    pull_request:
-        branches: [master]
+  push:
+    branches: [ master ]
+    tags: v*
+  pull_request:
+    branches: [ master ]
+  workflow_dispatch:
 
 jobs:
-    Build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - name: Setup dotnet
-              uses: actions/setup-dotnet@v3
-              with:
-                  dotnet-version: 7.0.x
-            - name: Initialize modding environment
-              uses: beat-forge/init-beatsaber@v1
-              with:
-                  token: ${{ github.token }}
-                  repo: beat-forge/beatsaber-stripped
-            - name: Download Mod Dependencies
-              uses: Goobwabber/download-beatmods-deps@1.3
-              with:
-                  manifest: ${{ github.workspace }}/Source/manifest.json
-            - name: Build
-              id: Build
-              run: dotnet build --configuration Release
-            - name: GitStatus
-              run: git status
-            - name: Echo Filename
-              run: echo $BUILDTEXT \($ASSEMBLYNAME\)
-              env:
-                  BUILDTEXT: Filename=${{ steps.Build.outputs.filename }}
-                  ASSEMBLYNAME: AssemblyName=${{ steps.Build.outputs.assemblyname }}
-            - name: Upload Artifact
-              uses: actions/upload-artifact@v4
-              with:
-                  name: ${{ steps.Build.outputs.filename }}
-                  path: ${{ steps.Build.outputs.artifactpath }}
-            - name: Release
-              uses: softprops/action-gh-release@v1
-              if: startsWith(github.ref, 'refs/tags/')
-              with:
-                  files: ./${{ steps.Build.outputs.filename }}.zip
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+  Build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 7.0.x
+
+      - name: Initialize modding environment
+        uses: beat-forge/init-beatsaber@v1
+        with:
+          token: ${{ github.token }}
+          repo: beat-forge/beatsaber-stripped
+
+      - name: Download Mod Dependencies
+        uses: Goobwabber/download-beatmods-deps@1.3
+        with:
+          manifest: ${{ github.workspace }}/Source/manifest.json
+
+      - name: Download Reactive.BeatSaberSDK
+        run: |
+            echo "📦 Downloading Reactive.BeatSaberSDK..."
+            curl -L "https://github.com/reactive-platform/beat-saber-sdk/releases/download/1.0.0/ReactiveUI_1.0.0_Release.zip" -o reactiveui.zip
+      
+            # Extract to temp folder to inspect
+            mkdir temp_extract
+            unzip -o reactiveui.zip -d temp_extract
+      
+            echo "Contents of temp_extract:"
+            find temp_extract
+      
+            # Copy to correct Refs folder structure
+            mkdir -p "$GITHUB_WORKSPACE/Refs/Libs"
+            mkdir -p "$GITHUB_WORKSPACE/Refs/Plugins"
+      
+            echo "Copying Libs..."
+            cp -rv temp_extract/Libs/* "$GITHUB_WORKSPACE/Refs/Libs/"
+            echo "Copying Plugins..."
+            cp -rv temp_extract/Plugins/* "$GITHUB_WORKSPACE/Refs/Plugins/"
+      
+            echo "Contents of Refs after copy:"
+            find "$GITHUB_WORKSPACE/Refs"
+      
+            # Clean up
+            rm -rf temp_extract reactiveui.zip
+            echo "✅ Reactive.BeatSaberSDK extracted to $GITHUB_WORKSPACE/Refs"
+
+      - name: Build
+        id: build
+        run: dotnet build --configuration Release
+
+      - name: Show Git Status
+        run: git status
+
+      - name: Echo Build Info
+        run: echo "Filename=${{ steps.build.outputs.filename }} (Assembly=${{ steps.build.outputs.assemblyname }})"
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ steps.build.outputs.filename }}
+          path: ${{ steps.build.outputs.artifactpath }}
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: ./${{ steps.build.outputs.filename }}.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
